resolved css issues, deleted unused files, renamed about to team for consistency

--- a/app/assets/stylesheets/general.less
+++ b/app/assets/stylesheets/general.less
@@ -8,6 +8,16 @@
 body {
 	font-family: @font;
   font-weight: 300;
+  -webkit-font-smoothing: antialiased;
+  font-size: 14px;
+}
+
+h1, h2, h3,h4, h5, h6 {
+  font-weight: normal;
+}
+
+hr {
+  border-top: 1px solid #ddd;
 }
 
 // CLEARFIX
