--- a/app/assets/stylesheets/login.less
+++ b/app/assets/stylesheets/login.less
@@ -1,42 +1,11 @@
-html, body {
+#login-page { //body
 	margin: 0;
 	height: 100% !important;
 }
 
-.dg.ac, #stats {
-  display: none;
-}
-
-#top {
+#login-page #top { //does this work todo
   background: transparent;
   color: white;
-}
-
-#brand-big {
-	margin: 0 auto;
-	width: 120px;
-	padding: 40px 20px 40px 20px;
-}
-
-#brand-big img {
-	width: 80px;
-}
-
-#canvas-container {
-  overflow: hidden;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  padding: 0;
-  margin: 0;
-  z-index: -1;
-}
-
-#canvas-container canvas {
-  top: 0;
-  position: relative;
-  z-index: 1;
 }
 
 #login-form {
