--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,3 +1,4 @@
+@import url( "../libs/iconset/flaticon.css" );
 @import url( "../libs/bootstrap/dist/css/bootstrap.min.css" );
 @import url( "../libs/fontawesome/css/font-awesome.min.css" );
 @import url( "../libs/targeted-atwho/dist/css/jquery.atwho.min.css" );
