--- a/app/assets/stylesheets/profile.less
+++ b/app/assets/stylesheets/profile.less
@@ -1,13 +1,8 @@
-html {
-    position: relative;
-    min-height: 100%;
-}
-
-body { // body
+#profile { // body
     margin: 0 0 70px; /* bottom = footer height */
 }
 
-footer {
+#profile footer {
     position: absolute;
     left: 0;
     bottom: 0;
@@ -19,7 +14,7 @@ footer {
 	padding-bottom: 40px;
 }
 
-.page-header {
+#profile .page-header {
 	border: 0;
 }
 
