--- a/app/public/account.jade
+++ b/app/public/account.jade
@@ -3,13 +3,15 @@ html(lang="en")
 head
   title Cograph | #{user.local.email}
   meta(charset='utf-8')
-  link(href='/assets/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
-  link(href='/assets/libs/fontawesome/css/font-awesome.min.css', rel='stylesheet')
-  link(href='/assets/stylesheets/custom-bootstrap-theme.css', rel='stylesheet')
-  link(href='/assets/stylesheets/general.css', rel='stylesheet')  
-  link(href='/assets/stylesheets/nav.css', rel='stylesheet') 
   base(href="/")
-  script(type='text/javascript', data-main="landing", src="/assets/libs/requirejs/require.js") //loads landing.js
+  // For Development
+  link(href='/assets/stylesheets/main.css', rel='stylesheet')
+  script(type='text/javascript', data-main="/main", src="/assets/libs/requirejs/require.js") //loads main.js
+
+  // For production
+  //link(href='/assets/stylesheets/main-graph-built.css', rel='stylesheet')
+  //script(type='text/javascript', data-main="/main-built", src="/assets/libs/requirejs/require.js")
+  
   script.
     window.prefetch =!{JSON.stringify(docs)};
 
