--- a/app/public/footer.jade
+++ b/app/public/footer.jade
@@ -5,7 +5,7 @@ footer
     p.pull-right
       a(href="http://www.twitter.com/thecograph") @thecograph
       | &nbsp;&nbsp;&nbsp;&nbsp;
-      a(href="/about") Team
+      a(href="/team") Team
       | &nbsp;&nbsp;&nbsp;&nbsp;
       a(href='/login') Login
       | &nbsp;&nbsp;&nbsp;&nbsp;
