--- a/app/public/login.jade
+++ b/app/public/login.jade
@@ -1,14 +1,15 @@
 html
   head
     title Cograph | Login
-    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css')
-    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css')
-    link(href='/assets/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
-    link(href='/assets/libs/fontawesome/css/font-awesome.min.css', rel='stylesheet')
-    link(href='/assets/stylesheets/general.css', rel='stylesheet')
-    link(href='/assets/stylesheets/nav.css', rel='stylesheet') 
-    link(href='/assets/stylesheets/login.css', rel='stylesheet')        
-  body
+    // For Development
+    link(href='/assets/stylesheets/main.css', rel='stylesheet')
+    script(type='text/javascript', data-main="/main", src="/assets/libs/requirejs/require.js") //loads main.js
+
+    // For production
+    //link(href='/assets/stylesheets/main-built.css', rel='stylesheet')
+    //script(type='text/javascript', data-main="/main-built", src="/assets/libs/requirejs/require.js")
+       
+  body#login-page
     include nav
     .container-fluid.pad-top
       .row
