--- a/app/public/team.jade
+++ b/app/public/team.jade
@@ -4,13 +4,15 @@ html(lang='en')
     meta(charset='utf-8')
     title Cograph
     meta(name='viewport', content='width=device-width,initial-scale=1.0')
-    link(href='assets/libs/iconset/flaticon.css', rel='stylesheet', type='text/css')
-    link(href='assets/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
-    link(href='assets/stylesheets/custom-bootstrap-theme.css', rel='stylesheet')
-    link(href='assets/stylesheets/general.css', rel='stylesheet')
-    link(href='/assets/stylesheets/nav.css', rel='stylesheet')
-    link(href='assets/stylesheets/team.css' rel='stylesheet')
-  body
+    // For Development
+    link(href='/assets/stylesheets/main.css', rel='stylesheet')
+    script(type='text/javascript', data-main="/main", src="/assets/libs/requirejs/require.js") //loads main.js
+
+    // For production
+    //link(href='/assets/stylesheets/main-built.css', rel='stylesheet')
+    //script(type='text/javascript', data-main="/main-built", src="/assets/libs/requirejs/require.js")
+
+  body#team
     include nav
     .container.main-content
       center
