--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -2,7 +2,6 @@
 
 #index h1 {
   color: #f2e244;
-  font-weight: 100;
 }
 
 #index .main-content {
@@ -158,6 +157,37 @@
 }
 
 #index #top {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 50px;
+  background: transparent;
+  color: white;
+}
+
+#index #canvas-container {
+  overflow: hidden;
+  height: 400px;
+  width: 100%;
+  position: absolute;
+  top: 0px;
+  padding: 0;
+  margin: 0;
+  z-index: -1;
+  background: black;
+
+  video {
+    min-width: 100%;
+  }
+}
+
+#index #canvas-container canvas {
+  top: 0;
+  position: relative;
+  z-index: 1;
+  height: 550px !important;
+  width: 100% !important;
+}
+
 #index #top {
   margin: 0;
   padding: 0;
