--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -165,7 +165,7 @@ svg {
 .connection text {
   font: 12px sans-serif;
   text-anchor: middle;
-  fill: @black;
+  fill: #000;
   cursor: pointer;
   text-shadow: 0 1px 0 #eee, 1px 0 0 #eee, 0 -1px 0 #eee, -1px 0 0 #eee;
 }
@@ -486,7 +486,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   margin: auto;
   i {
     position:relative;
-    color:@gray;
+    color:#666;
   }
 }
 
